fixed dark mode and about page

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   height: 100vh;
-  color: white;
-  background-color: black;
+  /* color: white;
+  background-color: black; */
   /* background: url("../public/background.jpg") no-repeat center center ;
    background-size:cover; */
   /* -webkit-background-size: cover;
